# CopilotWorkshop-CGT

./: CMakeLists.txt  README.md  library.db  test_korean.c
.github/: copilot-instructions.md
include/: book.h  constants.h  database.h  loan.h  main.h  member.h  types.h  utils.h
src/: book.c  database.c  loan.c  main.c  member.c  utils.c
tests/: CMakeLists.txt  run_tests.bat  run_tests.ps1  simple_test.c  test_simple.db
tests/integration/: test_integration.cpp
tests/test_build/: simple_test.c
tests/unit/: test_book.cpp  test_database.cpp  test_loan.cpp  test_member.cpp  test_utils.cpp
